style.css
body {
  font-family: 'Poppins', sans-serif;
  background-color: #000;
}
.container {
  max-width: 1400px;
  margin: 0 auto;
}
.grid {
  display: grid;
  grid-gap: 64px;
}
.img-responsive {
  width: 100%;
  display: block;
}

.grid-2-columns {
  grid-template-columns: 1fr 1fr;
}
.grid-3-columns {
  grid-template-columns: 1fr 1fr 1fr;
}

.grid-3-columns-with-first-narrow {
  grid-template-columns: 1fr 2fr 2fr;
}
.card {
  background: rgb(146, 144, 144);
  margin: 30px 0;
}
.embed {
  width: 100%;
  aspect-ratio: 1 /1;
}

.card-header.grid {
  grid-gap: 0;
}

.card-body {
  padding: 30px;
}

.card-footer {
  padding: 30px;
}
.btn {
  display: block;
  color: white;
  font-weight: 700;
  font-size: 14px;
  line-height: 21px;
  text-align: center;
  letter-spacing: 3px;
  text-transform: uppercase;
  padding: 16px;
  background-color: #378eff;
  text-decoration: none;
}
section {
  max-width: 100%;
  margin: 0 auto;
  padding: 100px;
}

.hero {
  background: url(/images/alb2.jpg);
  background-position: 50% 35%;
  background-repeat: no-repeat;
  background-size: cover;
  width: 100%;
}
.header {
  text-align: center;
  padding: 150px 0 100px;
  margin: 0;
  background-color: #000;
}
.icon {
  width: 120px;
  margin-bottom: 20px;
}
.header h1 {
  color: #ffff;
  background-color: #000;
  font-weight: 900;
  font-size: 200px;
  letter-spacing: 30px;
  line-height: 1;
  margin: 0;
  mix-blend-mode: multiply;
}
.header h2 {
  color: #ffff;
  font-size: 46px;
  font-weight: 400;
  letter-spacing: 20px;
  padding-bottom: 30px;
}
.header .btn {
  background-color: transparent;
  font-size: 26px;
  border: solid 2px #ffffff;
  color: #ffff;
  text-decoration: none;
  padding: 18px 23px;
  margin-left: auto;
  margin-bottom: 50px;
  letter-spacing: 3px;
}
.header .btn:hover {
  background-color: #054046;
  border: solid 2px #ffffff;
  color: #ffff;
  transition: all 200ms ease-in-out;
}
main {
  color: #ffff;
  padding: 90px;
  background: linear-gradient(0deg, rgb(0, 0, 0) 6.2%, rgb(11, 132, 145) 91.1%);
  background-repeat: no-repeat;
  background-size: cover;
}
main h2 {
  font-weight: 700;
  font-size: 16px;
  line-height: 1.5;
  margin: 0;
  letter-spacing: 5px;
  opacity: 0.3;
  text-transform: uppercase;
}

main h3 {
  font-weight: 700;
  font-size: 40px;
  line-height: 1.5;
  margin: 0;
}

main h4 {
  font-weight: 700;
  font-size: 24px;
  line-height: 1;
  margin: 0;
}

main h5 {
  font-weight: 700;
  font-size: 13px;
  margin: 0;
  line-height: 1;
}

main p {
  font-style: normal;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
  opacity: 0.7;
}
section {
  padding: 50px 0;
}
.gallery h2 {
  text-align: center;
  padding: 30px 20px;
  font-size: 150%;
  mix-blend-mode: plus-lighter;
}
.grid-gallery {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  grid-template-rows: repeat(2, 1fr);
  grid-column-gap: 15px;
  grid-row-gap: 15px;
}

.gallery img {
  aspect-ratio: 1 / 1;
}
.img-filter {
  filter: grayscale(100%);
  transition: all 200ms linear;
}

.img-filter:hover {
  filter: grayscale(0%);
  transform: scale(1.05);
  z-index: 1;
}

.i2 {
  grid-row: span 2;
}

.i4 {
  grid-column: span 2;
  grid-row: span 2;
}

.i6 {
  grid-row: span 2;
}
.i7 {
  grid-row: span 2;
}

.i9 {
  grid-row: span 2;
}
.i10 {
  grid-column: span 2;
}
.i11 {
  grid-row: span 4;
}

footer {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  grid-template-rows: 1fr;
  grid-column-gap: 15px;
  padding: 10px 20px;
  color: white;
  background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
    url(/images/johnny-africa-Ck6A8DyhfaY-unsplash.jpg);
  background-repeat: no-repeat;
  background-position: center;
  background-size: cover;

  ul,
  p {
    margin: 0;
    padding: 0;
  }

  li {
    display: block;
  }

  a {
    color: aqua;
  }

  a:visited {
    color: cornflowerblue;
  }
}

@media (max-width: 960px) {
  header {
    padding: 60px 0;
  }

  header h1 {
    font-size: 48px;
  }

  header h2 {
    font-size: 20px;
  }

  header h3 {
    font-size: 12px;
  }

  .grid {
    grid-template-columns: 1fr;
    grid-gap: 32px;
  }

  section {
    padding: 30px;
  }
}

.custom-wrapper-grid {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  grid-template-rows: 1fr;
  padding: 5px;
}

.custom-wrapper-grid > img {
  aspect-ratio: 1 / 1;
}

.custom-card-flex {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

@media (max-width: 960px) {
  header {
    padding: 60px 0;
  }

  .header h1 {
    font-size: 46px;
  }

  header h2 {
    font-size: 20px;
  }

  header h3 {
    font-size: 12px;
  }

  .grid {
    grid-template-columns: 1fr;
    grid-gap: 32px;
  }

  section {
    padding: 30px;
  }
  .card-header img {
    display: none;
  }

  .embed {
    aspect-ratio: 16 / 9;
  }
}

